--- a/Dairy_Care_System/dairy/static/css/changepassword.css
+++ b/Dairy_Care_System/dairy/static/css/changepassword.css
@@ -69,6 +69,7 @@ button[type="submit"]:hover {
 
 .error-message {
     color: red;
+    text-align: center; /* Center-align error messages */
     font-size: 0.9em;
     margin-top: 10px;
 }
