--- a/Dairy_Care_System/dairy/static/css/resetpassword.css
+++ b/Dairy_Care_System/dairy/static/css/resetpassword.css
@@ -67,11 +67,9 @@
 /* Error Message Styles */
 .error-message {
     color: red;
-    margin-top: 5px;
-    font-size: 14px;
+    text-align: center; /* Center-align error messages */
+    display: none; /* Hide error messages initially */
 }
-
 .messages {
-    margin-top: 20px;
-    color: red;
+    text-align: center; /* Center-align server-side messages */
 }
