--- a/Dairy_Care_System/templates/productdetails.html
+++ b/Dairy_Care_System/templates/productdetails.html
@@ -113,7 +113,7 @@
         <p><strong>Quantity:</strong> {{ product.product_quantity }} {{ product.quantity_unit }}</p>
         <p><strong>Added at:</strong> {{ product.added_at }}</p>
         <p><strong>Status:</strong> {{ product.status|yesno:"Available,Not Available" }}</p>
-        <button class="buy-button">Buy Now</button>
+        <button class="buy-button">Add to Cart</button>
     </div>
 
 </body>
