--- a/Dairy_Care_System/dairy/static/css/forgotpassword.css
+++ b/Dairy_Care_System/dairy/static/css/forgotpassword.css
@@ -6,7 +6,7 @@
 }
 
 .forgot-box {
-    background-color: rgba(210, 210, 210, 0.9);
+    background-color: white;
     border-radius: 15px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
     padding: 30px;
@@ -69,6 +69,7 @@ h2 {
 .error-message {
     color: red;
     font-size: 0.875em;
+    text-align: center;
     margin-top: 10px;
 }
 
