--- a/Dairy_Care_System/templates/custproductslist.html
+++ b/Dairy_Care_System/templates/custproductslist.html
@@ -16,7 +16,13 @@
 <ul>
     <div class="header">
         <div class="nav-item">
-            <li><b><a href="{% url 'home' %}">Your Orders</a></b></li>
+            <li><b><a href="{% url 'custproductslist' %}">Products list</a></b></li>
+        </div>
+        <div class="nav-item">
+            <li><b><a href="{% url 'customerpage' %}">Your Orders</a></b></li>
+        </div>
+        <div class="nav-item">
+            <li><b><a href="{% url 'feedbackpage' %}">Feedback</a></b></li>
         </div>
         <div class="nav-item">
             <li>
