--- a/Dairy_Care_System/templates/contactus.html
+++ b/Dairy_Care_System/templates/contactus.html
@@ -50,5 +50,8 @@
             <div><strong>District:</strong> Kottayam</div>
         </div>
     </div>
+    <center><footer>
+        <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
+    </center></footer>
 </body>
 </html>
