--- a/Dairy_Care_System/templates/forgotpassword.html
+++ b/Dairy_Care_System/templates/forgotpassword.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/forgotpassword.css' %}">
     <style>
         body {
-            background: url('{% static "images/forgotpassword.jpg" %}') no-repeat center center fixed;
+            background: url('{% static "images/for.png" %}') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Koh Santepheap', Arial, sans-serif;
         }
