--- a/Dairy_Care_System/dairy/static/css/adminpage.css
+++ b/Dairy_Care_System/dairy/static/css/adminpage.css
@@ -50,15 +50,16 @@ li a:hover {
 
 h1 {
     color: black;
-    font-size: 80px;
+    font-size: 40px;
     margin-top: 100px;
 }
 
-h2 {
-    color: white;
-    font-size: 20px;
+h3 {
+    color: black;
+    font-size: 30px;
     margin-left: 10px;
 }
+
 
 /* Dropdown styles */
 .dropdown-content {
@@ -100,3 +101,32 @@ h2 {
     width: 50px;
     height: 50px;
 } */
+
+.message {
+    font-size: 30px;
+    color: #000;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.quote {
+    font-style: italic;
+    font-size: 20px;
+    color: #060606;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.quote::before {
+    content: "“";
+}
+
+.quote::after {
+    content: "”";
+}
+
+footer {
+    text-align: center;
+    margin-top: 20px;
+    color: black;
+}
