--- a/Dairy_Care_System/dairy/static/css/contactus.css
+++ b/Dairy_Care_System/dairy/static/css/contactus.css
@@ -85,3 +85,9 @@ p.description {
     width: 50px;
     height: 50px;
 }
+
+footer {
+    text-align: center;
+    margin-top: 20px;
+    color: black;
+}
