--- a/Dairy_Care_System/dairy/static/css/employeepage.css
+++ b/Dairy_Care_System/dairy/static/css/employeepage.css
@@ -49,12 +49,12 @@ li a:hover {
 
 h1 {
     color: black;
-    font-size: 80px;
+    font-size: 60px;
     margin-top: 100px;
 }
 
-h2 {
-    color: white;
+h3 {
+    color: black;
     font-size: 20px;
     margin-left: 10px;
 }
@@ -99,3 +99,32 @@ h2 {
     width: 50px;
     height: 50px;
 } */
+
+.message {
+    font-size: 20px;
+    color: #000;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.quote {
+    font-style: italic;
+    font-size: 1.2em;
+    color: #555;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.quote::before {
+    content: "“";
+}
+
+.quote::after {
+    content: "”";
+}
+
+footer {
+    text-align: center;
+    margin-top: 20px;
+    color: black;
+}
