--- a/Dairy_Care_System/templates/employeepage.html
+++ b/Dairy_Care_System/templates/employeepage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'css/employeepage.css' %}">
     <style>
         body {
-            background: url('{% static "images/emppage.jpg" %}') no-repeat center center fixed;
+            background: url('{% static "images/emppg.png" %}') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
         }
