--- a/Dairy_Care_System/templates/adminpage.html
+++ b/Dairy_Care_System/templates/adminpage.html
@@ -26,19 +26,19 @@
         </div>   -->
         
         <div class="nav-item">
-            <li><b><a href="{% url 'addemployee' %}">Add Employee</a></b></li>
+            <li><b><a href="{% url 'reguserlist' 'all' %}">Users list</a></b></li>
         </div>
         <div class="nav-item">
             <li><b><a href="{% url 'productslist' %}">Products list</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'regusersview' 'employee' %}">Employee list</a></b></li>
+            <li><b><a href="{% url 'home' %}">Animals list</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'regusersview' 'customer' %}">Customer list</a></b></li>
+            <li><b><a href="{% url 'home' %}">Milk details</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'home' %}">Feedback Review</a></b></li>
+            <li><b><a href="{% url 'reguserlist' 'all' %}">Feedback Review</a></b></li>
         </div>
         <div class="nav-item">
             <li>
@@ -61,8 +61,8 @@
         Manage the system efficiently and effectively to keep everything running smoothly.
     </div><br><br>
     <div class="quote">
-        "Leadership is not about being in charge, but about taking care of those in your charge."
-    </div><br><br><br><br><br><br><br><br>
+        Leadership is not about being in charge, but about taking care of those in your charge.
+    </div><br><br><br><br><br><br><br><br><br><br>
 
 <footer>
     <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
