--- a/Dairy_Care_System/templates/employeepage.html
+++ b/Dairy_Care_System/templates/employeepage.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <title>Employee Page</title>
-    <link rel="stylesheet" href="{% static 'css/employeepage.css' %}">
+    <link rel="stylesheet" href="{% static 'css/customerpage.css' %}">
     <style>
         body {
             background: url('{% static "images/emppg.png" %}') no-repeat center center fixed;
@@ -52,12 +52,12 @@
     <!-- <h1><b>Employee Dashboard</b></h1> -->
 
     <div class="message"></div>
-       <h1> Hello, {{ username }}!</h1><br><br>
+        <h1>Welcome, {{ username }}!</h1> <br><br> 
         You are the backbone of the system. Your dedication makes everything possible.
     </div><br><br>
     <div class="quote">
-        "The strength of the team is each individual member. The strength of each member is the team."
-    </div><br><br><br><br><br><br><br><br>
+        The strength of the team is each individual member. The strength of each member is the team.
+    </div><br><br><br><br><br><br><br><br><br><br>
 
 <footer>
     <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
