--- a/Dairy_Care_System/dairy/static/css/adminpage.css
+++ b/Dairy_Care_System/dairy/static/css/adminpage.css
@@ -50,7 +50,7 @@ li a:hover {
 
 h1 {
     color: black;
-    font-size: 40px;
+    font-size: 60px;
     margin-top: 100px;
 }
 
@@ -112,7 +112,7 @@ h3 {
 .quote {
     font-style: italic;
     font-size: 20px;
-    color: #060606;
+    color: black;
     text-align: center;
     margin-top: 10px;
 }
