--- a/Dairy_Care_System/dairy/static/css/customerpage.css
+++ b/Dairy_Care_System/dairy/static/css/customerpage.css
@@ -49,7 +49,7 @@ li a:hover {
 
 h1 {
     color: black;
-    font-size: 80px;
+    font-size: 60px;
     margin-top: 100px;
 }
 
@@ -101,7 +101,7 @@ h3 {
 } */
 
 .message {
-    font-size: 20px;
+    font-size: 30px;
     color: #000;
     text-align: center;
     margin-top: 20px;
@@ -109,8 +109,8 @@ h3 {
 
 .quote {
     font-style: italic;
-    font-size: 1.2em;
-    color: #555;
+    font-size: 20px;
+    color: black;
     text-align: center;
     margin-top: 10px;
 }
