--- a/Dairy_Care_System/dairy/static/css/employeepage.css
+++ b/Dairy_Care_System/dairy/static/css/employeepage.css
@@ -101,7 +101,7 @@ h3 {
 } */
 
 .message {
-    font-size: 20px;
+    font-size: 60px;
     color: #000;
     text-align: center;
     margin-top: 20px;
@@ -109,8 +109,8 @@ h3 {
 
 .quote {
     font-style: italic;
-    font-size: 1.2em;
-    color: #555;
+    font-size: 20px;
+    color: black;
     text-align: center;
     margin-top: 10px;
 }
