--- a/Dairy_Care_System/dairy/static/css/reguserlist.css
+++ b/Dairy_Care_System/dairy/static/css/reguserlist.css
@@ -83,13 +83,14 @@ h1 {
     text-align: center;
     color: #000000;
     font-size: 40px;
-    margin-top: 40px;
+    margin-top: 20px;
 }
 
 .container {
     margin: 50px auto;
     padding: 20px;
-    max-width: 900px;
+    width: auto; /* Allow the width to adjust based on content */
+    max-width: 85%;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -105,11 +106,13 @@ table, th, td {
 }
 
 th, td {
-    padding: 12px;
+    padding: 15px;
     text-align: center;
+    font-size: 17px;
 }
 
 th {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #356299;
     color: white;
 }
@@ -126,6 +129,17 @@ tr:nth-child(even) {
     border-radius: 5px;
 }
 
+.delete-btn {
+    background-color: #dc3545;
+    font-size: 17px;
+    color: white;
+}
+
+.action-btns a:hover {
+    opacity: 0.8;
+}
+
+
 .view-btn {
     background-color: #007bff;
     color: white;
@@ -134,13 +148,4 @@ tr:nth-child(even) {
 .edit-btn {
     background-color: #ffc107;
     color: black;
-}
-
-.delete-btn {
-    background-color: #dc3545;
-    color: white;
-}
-
-.action-btns a:hover {
-    opacity: 0.8;
 }
