--- a/Dairy_Care_System/templates/customerpage.html
+++ b/Dairy_Care_System/templates/customerpage.html
@@ -27,7 +27,7 @@
                 <li><b><a href="{% url 'home' %}">Your Orders</a></b></li>
             </div>
             <div class="nav-item">
-                <li><b><a href="{% url 'feedbackpage' %}">Feedback</a></b></li>
+                <li><b><a href="{% url 'feedbackpage' %}">Your Feedback</a></b></li>
             </div>
             <div class="nav-item">
                 <li>
@@ -50,8 +50,8 @@
         We value your trust and aim to deliver the best shopping experience for you.
     </div><br><br>
     <div class="quote">
-        "A satisfied customer is the best business strategy of all."
-    </div><br><br><br><br><br><br><br><br>
+        A satisfied customer is the best business strategy of all.
+    </div><br><br><br><br><br><br><br><br><br><br>
 
 <footer>
     <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
